SET(LIB_PREFIX tools_)

ADD_LIBRARY(bit_parser
  bit_parser.cpp
)

#TARGET_LINK_LIBRARIES(bit_parsing
#)

SET_TARGET_PROPERTIES(bit_parser PROPERTIES OUTPUT_NAME ${LIB_PREFIX}bit_parser)

INSTALL(TARGETS bit_parser
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
INSTALL(FILES ${headers} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/bit_parser)