SET(LIB_PREFIX tools_)

ADD_LIBRARY(integral
  gaussian_lookup2.cpp
)

TARGET_LINK_LIBRARIES(integral
  functions
)

SET_TARGET_PROPERTIES(integral PROPERTIES OUTPUT_NAME ${LIB_PREFIX}integral)

INSTALL(TARGETS integral
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
INSTALL(FILES ${headers} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME}/integral)