SET(LIB_PREFIX tools_)

ADD_LIBRARY(sampler
  sampler.h
  sampler.cpp
)

#TARGET_LINK_LIBRARIES(sampler
#  #boost_system
#  #boost_filesystem
#)

SET_TARGET_PROPERTIES(sampler PROPERTIES OUTPUT_NAME ${LIB_PREFIX}sampler)

INSTALL(TARGETS sampler
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
INSTALL(FILES ${headers} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME}/sampler)